# bearing-syntactic-fruit

./: .gitignore  Dockerfile-dev  README.md  pyproject.toml
experiments/: config.bash  include.bash  job.bash  run.bash  setup.bash  singularity_exec.bash  singularity_shell.bash
experiments/analysis/: print_hyperparameter_search_table.bash  print_table.bash
experiments/preprocessing/: download_data.bash  submit_prepare_data_jobs.bash
experiments/training/: submit_continue_hyperparameter_search_jobs.bash  submit_continue_train_and_evaluate_tuned_model_jobs.bash  submit_evaluate_hyperparameter_search_jobs.bash  submit_hyperparameter_search_jobs.bash  submit_rerun_evaluation_jobs.bash  submit_train_and_evaluate_jobs.bash  submit_train_and_evaluate_tuned_model_jobs.bash
scripts/: generate_code_submission.bash  poetry_shell.bash  variables.bash
src/: agree_recent.py  continue_train_and_evaluate.bash  continue_train_and_evaluate_tuned_model.bash  continue_train_with_random_hyperparameters.bash  download_mccoy_etal_2020.bash  evaluate.bash  first_word_accuracy.py  full_match.py  generalization_ratio.py  mean_probability.py  move_first.py  prepare_data.bash  print_best_hyperparameters.py  print_best_table.py  print_mean_table.py  print_median_table.py  print_table_util.py  read_model.py  tense_reinflection_fine_accuracy.py  train_and_evaluate.bash  train_and_evaluate_tuned_model.bash  train_with_random_hyperparameters.bash
